force-app/main/default/objects/Trade_Reference__c/Trade_Reference__c.object-meta.xml
<CustomObject>
    <label>Trade Reference</label>
    <nameField>
        <label>Trade Reference Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trade References</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>