force-app/main/default/objects/Trade_Reference__c/fields/TradeRaf_Account__c.field-meta.xml
<CustomField>
    <fullName>TradeRaf_Account__c</fullName>
    <label>Account</label>
    <length>25</length>
    <type>Text</type>
</CustomField>