force-app/main/default/objects/Trade_Reference__c/fields/TradeRef_Address__c.field-meta.xml
<CustomField>
    <fullName>TradeRef_Address__c</fullName>
    <label>Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>