force-app/main/default/objects/Trade_Reference__c/fields/TradeRef_City__c.field-meta.xml
<CustomField>
    <fullName>TradeRef_City__c</fullName>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>