force-app/main/default/objects/Trade_Reference__c/fields/TradeRef_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>TradeRef_Contact_Name__c</fullName>
    <label>Contact Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>