force-app/main/default/objects/Trade_Reference__c/fields/TradeRef_Email__c.field-meta.xml
<CustomField>
    <fullName>TradeRef_Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>