force-app/main/default/objects/Trade_Reference__c/fields/TradeRef_Fax__c.field-meta.xml
<CustomField>
    <fullName>TradeRef_Fax__c</fullName>
    <label>Fax</label>
    <type>Phone</type>
</CustomField>