force-app/main/default/objects/Trade_Reference__c/fields/TradeRef_Telephone__c.field-meta.xml
<CustomField>
    <fullName>TradeRef_Telephone__c</fullName>
    <label>Telephone</label>
    <type>Phone</type>
</CustomField>