force-app/main/default/objects/Trade_Reference__c/fields/TradeRef_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>TradeRef_Zip_Code__c</fullName>
    <label>Zip Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>